force-app/main/default/objects/ArtifactSnapshot__c/ArtifactSnapshot__c.object-meta.xml
<CustomObject>
    <description>Snapshot of a metadata component captured during a scan</description>
    <label>Artifact Snapshot</label>
    <nameField>
        <displayFormat>SNAP-{000000}</displayFormat>
        <label>Snapshot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Artifact Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>