force-app/main/default/objects/ArtifactSnapshot__c/fields/ApiVersion__c.field-meta.xml
<CustomField>
    <fullName>ApiVersion__c</fullName>
    <description>Current API version of the component</description>
    <label>API Version</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>