force-app/main/default/objects/ArtifactSnapshot__c/fields/BaselineHash__c.field-meta.xml
<CustomField>
    <fullName>BaselineHash__c</fullName>
    <description>Baseline hash for comparison</description>
    <label>Baseline Hash</label>
    <length>64</length>
    <type>Text</type>
</CustomField>