force-app/main/default/objects/ArtifactSnapshot__c/fields/ChangedFromBaseline__c.field-meta.xml
<CustomField>
    <fullName>ChangedFromBaseline__c</fullName>
    <description>Whether content has changed from baseline</description>
    <defaultValue>false</defaultValue>
    <label>Changed From Baseline</label>
    <type>Checkbox</type>
</CustomField>