force-app/main/default/objects/ArtifactSnapshot__c/fields/ContentExcerpt__c.field-meta.xml
<CustomField>
    <fullName>ContentExcerpt__c</fullName>
    <description>Optional excerpt of content for diff display</description>
    <label>Content Excerpt</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>