force-app/main/default/objects/ArtifactSnapshot__c/fields/ContentHash__c.field-meta.xml
<CustomField>
    <fullName>ContentHash__c</fullName>
    <description>SHA-256 hash of the component content</description>
    <label>Content Hash</label>
    <length>64</length>
    <type>Text</type>
</CustomField>