force-app/main/default/objects/ArtifactSnapshot__c/fields/ContentStoredMode__c.field-meta.xml
<CustomField>
    <fullName>ContentStoredMode__c</fullName>
    <description>How content is stored for this artifact</description>
    <label>Content Stored Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HashOnly</fullName>
                <default>true</default>
                <label>Hash Only</label>
            </value>
            <value>
                <fullName>Excerpt</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>