force-app/main/default/objects/ArtifactSnapshot__c/fields/DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>DeveloperName__c</fullName>
    <description>Developer name of the component</description>
    <label>Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>