force-app/main/default/objects/ArtifactSnapshot__c/fields/LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedDate__c</fullName>
    <description>When the component was last modified</description>
    <label>Component Last Modified</label>
    <type>DateTime</type>
</CustomField>