force-app/main/default/objects/ArtifactSnapshot__c/fields/NamespacePrefix__c.field-meta.xml
<CustomField>
    <fullName>NamespacePrefix__c</fullName>
    <description>Namespace prefix if from a managed package</description>
    <label>Namespace Prefix</label>
    <length>50</length>
    <type>Text</type>
</CustomField>