force-app/main/default/objects/ArtifactSnapshot__c/fields/Scan__c.field-meta.xml
<CustomField>
    <fullName>Scan__c</fullName>
    <description>Parent scan record</description>
    <label>Scan</label>
    <referenceTo>Scan__c</referenceTo>
    <relationshipLabel>Artifact Snapshots</relationshipLabel>
    <relationshipName>ArtifactSnapshots</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>