force-app/main/default/objects/ArtifactSnapshot__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the component (Active, Inactive, etc.)</description>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>